--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "es6-promise": "^4.2.8",
+    "serialize-javascript": "^2.1.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
